[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/enemies/explosion_01_strip13.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/big_onion/poison.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 196, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 392, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 588, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 784, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 980, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1176, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1372, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1568, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1764, 0, 196, 190 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1960, 0, 196, 190 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=13]

[node name="poison" type="Node2D"]
scale = Vector2( 10.3472, 10.3472 )
script = ExtResource( 2 )

[node name="Image" type="AnimatedSprite" parent="."]
self_modulate = Color( 0, 0.537255, 0, 0.172549 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 12 )

[node name="PoisonArea" type="Area2D" parent="."]
scale = Vector2( 1.88355, 1.88355 )
collision_layer = 0
collision_mask = 2

[node name="PoisonAreaCollider" type="CollisionShape2D" parent="PoisonArea"]
shape = SubResource( 13 )

[connection signal="animation_finished" from="Image" to="." method="_on_Image_animation_finished"]
[connection signal="body_entered" from="PoisonArea" to="." method="_on_PoisonArea_body_entered"]
[connection signal="body_exited" from="PoisonArea" to="." method="_on_PoisonArea_body_exited"]
